--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
 body{
-    background-color: rgb(224, 215, 204) ;
-    
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+
 }
 
 
-#presentacion{
-    background-image: url(assets/fonbei.jpg);
-   
+#presentacion {
+    height: 90vh;
+    background-image: url("https://static.vecteezy.com/system/resources/previews/009/279/467/non_2x/an-abstract-cures-of-pastel-color-stylish-templates-design-with-modern-shapes-and-line-in-nude-pastel-colors-mode-neutral-background-in-minimalist-templates-and-contemporary-illustration-free-vector.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
-
-
-.baskervville-sc-regular {
-    font-family: "Baskervville SC", serif;
+  
+  .castoro-titling-regular {
+    font-family: "Castoro Titling", serif;
     font-weight: 400;
     font-style: normal;
   }
+  
+  
   
